Compiler/opene_parse/openeParser.cpp

// Generated from openeParser.g4 by ANTLR 4.7.1


#include "openeParserListener.h"
#include "openeParserVisitor.h"

#include "openeParser.h"


using namespace antlrcpp;
using namespace opene;
using namespace antlr4;

openeParser::openeParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

openeParser::~openeParser() {
  delete _interpreter;
}

std::string openeParser::getGrammarFileName() const {
  return "openeParser.g4";
}

const std::vector<std::string>& openeParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& openeParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- Opene_srcContext ------------------------------------------------------------------

openeParser::Opene_srcContext::Opene_srcContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

openeParser::Edition_specContext* openeParser::Opene_srcContext::edition_spec() {
  return getRuleContext<openeParser::Edition_specContext>(0);
}

tree::TerminalNode* openeParser::Opene_srcContext::NEWLINE() {
  return getToken(openeParser::NEWLINE, 0);
}

openeParser::Src_contentContext* openeParser::Opene_srcContext::src_content() {
  return getRuleContext<openeParser::Src_contentContext>(0);
}

tree::TerminalNode* openeParser::Opene_srcContext::EOF() {
  return getToken(openeParser::EOF, 0);
}


size_t openeParser::Opene_srcContext::getRuleIndex() const {
  return openeParser::RuleOpene_src;
}

void openeParser::Opene_srcContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<openeParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterOpene_src(this);
}

void openeParser::Opene_srcContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<openeParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitOpene_src(this);
}


antlrcpp::Any openeParser::Opene_srcContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<openeParserVisitor*>(visitor))
    return parserVisitor->visitOpene_src(this);
  else
    return visitor->visitChildren(this);
}

openeParser::Opene_srcContext* openeParser::opene_src() {
  Opene_srcContext *_localctx = _tracker.createInstance<Opene_srcContext>(_ctx, getState());
  enterRule(_localctx, 0, openeParser::RuleOpene_src);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(86);
    edition_spec();
    setState(87);
    match(openeParser::NEWLINE);
    setState(88);
    src_content();
    setState(89);
    match(openeParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Src_contentContext ------------------------------------------------------------------

openeParser::Src_contentContext::Src_contentContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

openeParser::Program_set_fileContext* openeParser::Src_contentContext::program_set_file() {
  return getRuleContext<openeParser::Program_set_fileContext>(0);
}

openeParser::Data_structure_fileContext* openeParser::Src_contentContext::data_structure_file() {
  return getRuleContext<openeParser::Data_structure_fileContext>(0);
}

openeParser::Global_variable_fileContext* openeParser::Src_contentContext::global_variable_file() {
  return getRuleContext<openeParser::Global_variable_fileContext>(0);
}

openeParser::Dll_define_fileContext* openeParser::Src_contentContext::dll_define_file() {
  return getRuleContext<openeParser::Dll_define_fileContext>(0);
}


size_t openeParser::Src_contentContext::getRuleIndex() const {
  return openeParser::RuleSrc_content;
}

void openeParser::Src_contentContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<openeParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterSrc_content(this);
}

void openeParser::Src_contentContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<openeParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitSrc_content(this);
}


antlrcpp::Any openeParser::Src_contentContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<openeParserVisitor*>(visitor))
    return parserVisitor->visitSrc_content(this);
  else
    return visitor->visitChildren(this);
}

openeParser::Src_contentContext* openeParser::src_content() {
  Src_contentContext *_localctx = _tracker.createInstance<Src_contentContext>(_ctx, getState());
  enterRule(_localctx, 2, openeParser::RuleSrc_content);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(95);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 0, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(91);
      program_set_file();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(92);
      data_structure_file();
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(93);
      global_variable_file();
      break;
    }

    case 4: {
      enterOuterAlt(_localctx, 4);
      setState(94);
      dll_define_file();
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Program_set_fileContext ------------------------------------------------------------------

openeParser::Program_set_fileContext::Program_set_fileContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

openeParser::Library_list_optContext* openeParser::Program_set_fileContext::library_list_opt() {
  return getRuleContext<openeParser::Library_list_optContext>(0);
}

openeParser::Prog_setContext* openeParser::Program_set_fileContext::prog_set() {
  return getRuleContext<openeParser::Prog_setContext>(0);
}


size_t openeParser::Program_set_fileContext::getRuleIndex() const {
  return openeParser::RuleProgram_set_file;
}

void openeParser::Program_set_fileContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<openeParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterProgram_set_file(this);
}

void openeParser::Program_set_fileContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<openeParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitProgram_set_file(this);
}


antlrcpp::Any openeParser::Program_set_fileContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<openeParserVisitor*>(visitor))
    return parserVisitor->visitProgram_set_file(this);
  else
    return visitor->visitChildren(this);
}

openeParser::Program_set_fileContext* openeParser::program_set_file() {
  Program_set_fileContext *_localctx = _tracker.createInstance<Program_set_fileContext>(_ctx, getState());
  enterRule(_localctx, 4, openeParser::RuleProgram_set_file);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(97);
    library_list_opt();
    setState(98);
    prog_set();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Data_structure_fileContext ------------------------------------------------------------------

openeParser::Data_structure_fileContext::Data_structure_fileContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<openeParser::Struct_declareContext *> openeParser::Data_structure_fileContext::struct_declare() {
  return getRuleContexts<openeParser::Struct_declareContext>();
}

openeParser::Struct_declareContext* openeParser::Data_structure_fileContext::struct_declare(size_t i) {
  return getRuleContext<openeParser::Struct_declareContext>(i);
}


size_t openeParser::Data_structure_fileContext::getRuleIndex() const {
  return openeParser::RuleData_structure_file;
}

void openeParser::Data_structure_fileContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<openeParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterData_structure_file(this);
}

void openeParser::Data_structure_fileContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<openeParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitData_structure_file(this);
}


antlrcpp::Any openeParser::Data_structure_fileContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<openeParserVisitor*>(visitor))
    return parserVisitor->visitData_structure_file(this);
  else
    return visitor->visitChildren(this);
}

openeParser::Data_structure_fileContext* openeParser::data_structure_file() {
  Data_structure_fileContext *_localctx = _tracker.createInstance<Data_structure_fileContext>(_ctx, getState());
  enterRule(_localctx, 6, openeParser::RuleData_structure_file);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(103);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == openeParser::K_STRUCTURE) {
      setState(100);
      struct_declare();
      setState(105);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Global_variable_fileContext ------------------------------------------------------------------

openeParser::Global_variable_fileContext::Global_variable_fileContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

openeParser::Global_variable_listContext* openeParser::Global_variable_fileContext::global_variable_list() {
  return getRuleContext<openeParser::Global_variable_listContext>(0);
}


size_t openeParser::Global_variable_fileContext::getRuleIndex() const {
  return openeParser::RuleGlobal_variable_file;
}

void openeParser::Global_variable_fileContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<openeParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterGlobal_variable_file(this);
}

void openeParser::Global_variable_fileContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<openeParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitGlobal_variable_file(this);
}


antlrcpp::Any openeParser::Global_variable_fileContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<openeParserVisitor*>(visitor))
    return parserVisitor->visitGlobal_variable_file(this);
  else
    return visitor->visitChildren(this);
}

openeParser::Global_variable_fileContext* openeParser::global_variable_file() {
  Global_variable_fileContext *_localctx = _tracker.createInstance<Global_variable_fileContext>(_ctx, getState());
  enterRule(_localctx, 8, openeParser::RuleGlobal_variable_file);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(106);
    global_variable_list();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Dll_define_fileContext ------------------------------------------------------------------

openeParser::Dll_define_fileContext::Dll_define_fileContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<openeParser::Dll_commandContext *> openeParser::Dll_define_fileContext::dll_command() {
  return getRuleContexts<openeParser::Dll_commandContext>();
}

openeParser::Dll_commandContext* openeParser::Dll_define_fileContext::dll_command(size_t i) {
  return getRuleContext<openeParser::Dll_commandContext>(i);
}


size_t openeParser::Dll_define_fileContext::getRuleIndex() const {
  return openeParser::RuleDll_define_file;
}

void openeParser::Dll_define_fileContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<openeParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterDll_define_file(this);
}

void openeParser::Dll_define_fileContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<openeParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitDll_define_file(this);
}


antlrcpp::Any openeParser::Dll_define_fileContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<openeParserVisitor*>(visitor))
    return parserVisitor->visitDll_define_file(this);
  else
    return visitor->visitChildren(this);
}

openeParser::Dll_define_fileContext* openeParser::dll_define_file() {
  Dll_define_fileContext *_localctx = _tracker.createInstance<Dll_define_fileContext>(_ctx, getState());
  enterRule(_localctx, 10, openeParser::RuleDll_define_file);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(111);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == openeParser::K_DLL_DEFINE) {
      setState(108);
      dll_command();
      setState(113);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Dll_commandContext ------------------------------------------------------------------

openeParser::Dll_commandContext::Dll_commandContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* openeParser::Dll_commandContext::K_DLL_DEFINE() {
  return getToken(openeParser::K_DLL_DEFINE, 0);
}

std::vector<tree::TerminalNode *> openeParser::Dll_commandContext::TABLE_COMMA() {
  return getTokens(openeParser::TABLE_COMMA);
}

tree::TerminalNode* openeParser::Dll_commandContext::TABLE_COMMA(size_t i) {
  return getToken(openeParser::TABLE_COMMA, i);
}

tree::TerminalNode* openeParser::Dll_commandContext::TABLE_END() {
  return getToken(openeParser::TABLE_END, 0);
}

std::vector<tree::TerminalNode *> openeParser::Dll_commandContext::TABLE_ITEM() {
  return getTokens(openeParser::TABLE_ITEM);
}

tree::TerminalNode* openeParser::Dll_commandContext::TABLE_ITEM(size_t i) {
  return getToken(openeParser::TABLE_ITEM, i);
}

openeParser::Table_commentContext* openeParser::Dll_commandContext::table_comment() {
  return getRuleContext<openeParser::Table_commentContext>(0);
}

std::vector<openeParser::Parameter_declContext *> openeParser::Dll_commandContext::parameter_decl() {
  return getRuleContexts<openeParser::Parameter_declContext>();
}

openeParser::Parameter_declContext* openeParser::Dll_commandContext::parameter_decl(size_t i) {
  return getRuleContext<openeParser::Parameter_declContext>(i);
}

std::vector<tree::TerminalNode *> openeParser::Dll_commandContext::NEWLINE() {
  return getTokens(openeParser::NEWLINE);
}

tree::TerminalNode* openeParser::Dll_commandContext::NEWLINE(size_t i) {
  return getToken(openeParser::NEWLINE, i);
}


size_t openeParser::Dll_commandContext::getRuleIndex() const {
  return openeParser::RuleDll_command;
}

void openeParser::Dll_commandContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<openeParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterDll_command(this);
}

void openeParser::Dll_commandContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<openeParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitDll_command(this);
}


antlrcpp::Any openeParser::Dll_commandContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<openeParserVisitor*>(visitor))
    return parserVisitor->visitDll_command(this);
  else
    return visitor->visitChildren(this);
}

openeParser::Dll_commandContext* openeParser::dll_command() {
  Dll_commandContext *_localctx = _tracker.createInstance<Dll_commandContext>(_ctx, getState());
  enterRule(_localctx, 12, openeParser::RuleDll_command);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(114);
    match(openeParser::K_DLL_DEFINE);
    setState(115);
    dynamic_cast<Dll_commandContext *>(_localctx)->name = match(openeParser::TABLE_ITEM);
    setState(116);
    match(openeParser::TABLE_COMMA);
    setState(118);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == openeParser::TABLE_ITEM) {
      setState(117);
      dynamic_cast<Dll_commandContext *>(_localctx)->type = match(openeParser::TABLE_ITEM);
    }
    setState(120);
    match(openeParser::TABLE_COMMA);
    setState(122);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == openeParser::TABLE_ITEM) {
      setState(121);
      dynamic_cast<Dll_commandContext *>(_localctx)->file = match(openeParser::TABLE_ITEM);
    }
    setState(124);
    match(openeParser::TABLE_COMMA);
    setState(125);
    dynamic_cast<Dll_commandContext *>(_localctx)->cmd = match(openeParser::TABLE_ITEM);
    setState(128);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == openeParser::TABLE_COMMA) {
      setState(126);
      match(openeParser::TABLE_COMMA);
      setState(127);
      table_comment();
    }
    setState(130);
    match(openeParser::TABLE_END);
    setState(134);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == openeParser::K_PARAMETER) {
      setState(131);
      parameter_decl();
      setState(136);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(140);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == openeParser::NEWLINE) {
      setState(137);
      match(openeParser::NEWLINE);
      setState(142);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Global_variable_listContext ------------------------------------------------------------------

openeParser::Global_variable_listContext::Global_variable_listContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<openeParser::Global_variable_itemContext *> openeParser::Global_variable_listContext::global_variable_item() {
  return getRuleContexts<openeParser::Global_variable_itemContext>();
}

openeParser::Global_variable_itemContext* openeParser::Global_variable_listContext::global_variable_item(size_t i) {
  return getRuleContext<openeParser::Global_variable_itemContext>(i);
}


size_t openeParser::Global_variable_listContext::getRuleIndex() const {
  return openeParser::RuleGlobal_variable_list;
}

void openeParser::Global_variable_listContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<openeParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterGlobal_variable_list(this);
}

void openeParser::Global_variable_listContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<openeParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitGlobal_variable_list(this);
}


antlrcpp::Any openeParser::Global_variable_listContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<openeParserVisitor*>(visitor))
    return parserVisitor->visitGlobal_variable_list(this);
  else
    return visitor->visitChildren(this);
}

openeParser::Global_variable_listContext* openeParser::global_variable_list() {
  Global_variable_listContext *_localctx = _tracker.createInstance<Global_variable_listContext>(_ctx, getState());
  enterRule(_localctx, 14, openeParser::RuleGlobal_variable_list);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(146);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == openeParser::K_GLOBAL_VARIABLE) {
      setState(143);
      global_variable_item();
      setState(148);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Global_variable_itemContext ------------------------------------------------------------------

openeParser::Global_variable_itemContext::Global_variable_itemContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* openeParser::Global_variable_itemContext::K_GLOBAL_VARIABLE() {
  return getToken(openeParser::K_GLOBAL_VARIABLE, 0);
}

tree::TerminalNode* openeParser::Global_variable_itemContext::TABLE_END() {
  return getToken(openeParser::TABLE_END, 0);
}

std::vector<tree::TerminalNode *> openeParser::Global_variable_itemContext::TABLE_ITEM() {
  return getTokens(openeParser::TABLE_ITEM);
}

tree::TerminalNode* openeParser::Global_variable_itemContext::TABLE_ITEM(size_t i) {
  return getToken(openeParser::TABLE_ITEM, i);
}

std::vector<tree::TerminalNode *> openeParser::Global_variable_itemContext::TABLE_COMMA() {
  return getTokens(openeParser::TABLE_COMMA);
}

tree::TerminalNode* openeParser::Global_variable_itemContext::TABLE_COMMA(size_t i) {
  return getToken(openeParser::TABLE_COMMA, i);
}

openeParser::Table_commentContext* openeParser::Global_variable_itemContext::table_comment() {
  return getRuleContext<openeParser::Table_commentContext>(0);
}


size_t openeParser::Global_variable_itemContext::getRuleIndex() const {
  return openeParser::RuleGlobal_variable_item;
}

void openeParser::Global_variable_itemContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<openeParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterGlobal_variable_item(this);
}

void openeParser::Global_variable_itemContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<openeParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitGlobal_variable_item(this);
}


antlrcpp::Any openeParser::Global_variable_itemContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<openeParserVisitor*>(visitor))
    return parserVisitor->visitGlobal_variable_item(this);
  else
    return visitor->visitChildren(this);
}

openeParser::Global_variable_itemContext* openeParser::global_variable_item() {
  Global_variable_itemContext *_localctx = _tracker.createInstance<Global_variable_itemContext>(_ctx, getState());
  enterRule(_localctx, 16, openeParser::RuleGlobal_variable_item);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(149);
    match(openeParser::K_GLOBAL_VARIABLE);
    setState(150);
    dynamic_cast<Global_variable_itemContext *>(_localctx)->name = match(openeParser::TABLE_ITEM);
    setState(171);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == openeParser::TABLE_COMMA) {
      setState(151);
      match(openeParser::TABLE_COMMA);
      setState(153);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if (_la == openeParser::TABLE_ITEM) {
        setState(152);
        dynamic_cast<Global_variable_itemContext *>(_localctx)->type = match(openeParser::TABLE_ITEM);
      }
      setState(169);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if (_la == openeParser::TABLE_COMMA) {
        setState(155);
        match(openeParser::TABLE_COMMA);
        setState(157);
        _errHandler->sync(this);

        _la = _input->LA(1);
        if (_la == openeParser::TABLE_ITEM) {
          setState(156);
          dynamic_cast<Global_variable_itemContext *>(_localctx)->access = match(openeParser::TABLE_ITEM);
        }
        setState(167);
        _errHandler->sync(this);

        _la = _input->LA(1);
        if (_la == openeParser::TABLE_COMMA) {
          setState(159);
          match(openeParser::TABLE_COMMA);
          setState(161);
          _errHandler->sync(this);

          _la = _input->LA(1);
          if (_la == openeParser::TABLE_ITEM) {
            setState(160);
            dynamic_cast<Global_variable_itemContext *>(_localctx)->dimension = match(openeParser::TABLE_ITEM);
          }
          setState(165);
          _errHandler->sync(this);

          _la = _input->LA(1);
          if (_la == openeParser::TABLE_COMMA) {
            setState(163);
            match(openeParser::TABLE_COMMA);
            setState(164);
            table_comment();
          }
        }
      }
    }
    setState(173);
    match(openeParser::TABLE_END);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Edition_specContext ------------------------------------------------------------------
